# loan

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/loan/: __init__.py  __main__.py  cli.py  comparison.py  errors.py  models.py  presentation.py  rate_schedule.py  validation.py
src/loan/strategies/: __init__.py  base.py  equal_installment.py  equal_principal.py  variable_installment.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_comparison.py  test_presentation.py  test_rate_schedule.py  test_strategies.py  test_validation.py  test_variable_installment.py
