[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loankit"
version = "0.1.0"
description = "贷款还款计划计算器，支持等额本金、等额本息及浮动利率还款方式"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "gdufsh", email = "gdufsh@gmail.com" }]
keywords = ["loan", "mortgage", "repayment", "calculator", "贷款", "按揭"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
    "Environment :: Console",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/gdufsh/loankit"
Repository = "https://github.com/gdufsh/loankit"
Issues = "https://github.com/gdufsh/loankit/issues"
Changelog = "https://github.com/gdufsh/loankit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
loan = "loan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loan"]

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    ".claude/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=loan --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
